--- a/client/src/components/Main.css
+++ b/client/src/components/Main.css
@@ -1,8 +1,9 @@
 
   
   .boxShadow {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
     border-radius: 5px;
+    box-shadow: 2px 2px 3px #888888;
   }
 
   .bg {
